# jalali_calendar_app

./: COMMANDS.md  DOCUMENTATION.md  FINAL_CHECKLIST.md  INSTALLATION_GUIDE.md  LICENSE  README.md  README_COMPLETE.md  SETUP_CHECKLIST.md  USE_CASES.md  download_dependencies.sh  install.sh  install_enhanced.sh  package.json  pyproject.toml  requirements.txt  setup.py
.claude/: settings.local.json
jalali_calendar/: README.md  __init__.py  hooks.py  hooks_enhanced.py  requirements.txt  setup.py
jalali_calendar/fixtures/: fixtures.json
jalali_calendar/jalali_calendar/: __init__.py  api.py  api_enhanced.py  install.py  permissions.py  report_handler.py  tasks.py
jalali_calendar/jalali_calendar/doctype/jalali_calendar_settings/: jalali_calendar_settings.json  jalali_calendar_settings.py
jalali_calendar/jalali_calendar/doctype/jalali_holiday/: jalali_holiday.json  jalali_holiday.py
jalali_calendar/jalali_calendar/utils/: date_converter.py  jinja_filters.py  print_handler.py
jalali_calendar/public/: build.json
jalali_calendar/public/css/: jalali_calendar.css  persianDatepicker.css
jalali_calendar/public/js/: jalali_calendar.js  jalali_calendar_enhanced.js  moment-jalaali.min.js  persianDatepicker.min.js
