[project]
name = "jalali_calendar"
authors = [
    {name = "Eren Aydin", email = "****@gmail.com"}
]
description = "Jalali (Shamsi) Calendar for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]