[project]
name = "jalali_calendar"
authors = [
    {name = "Eren Aydin", email = "****@gmail.com"}
]
description = "Jalali (Shamsi) Calendar for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.bench.dev-dependencies]