[project]
name = "jalali_calendar"
version = "1.0.0"
description = "Jalali (Persian) Calendar for ERPNext"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "frappe",
    "persiantools==5.3.0",
    "jdatetime==5.2.0"
]

[tool.bench]
frappe_app = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"